# POC-polkadai-bridge

./: .gitignore  Cargo.toml  README.md
bridge/dai-home/: README.md  package.json  truffle-config.js
bridge/dai-home/contracts/helpers/: ValidatorsOperations.sol
bridge/dai-home/migrations/: 2_deploy_bridge.js
bridge/dai-home/test/: ValidatorsOperations.js
bridge/ethereum/: .gitignore  README.md  package-lock.json
bridge/ethereum/contracts/impl/: ValidatorsOperationsImpl.sol
bridge/ethereum/contracts/main/: DAIBridge.sol
bridge/ethereum/test/helpers/: decodeLogs.js
bridge/frontend/: README.md  package-lock.json  package.json  tsconfig.json
bridge/frontend/@types/: extendWindow.d.ts
bridge/frontend/src/: env.ts  index.html  index.tsx
bridge/frontend/src/abis/: bridge.json  erc20.json
bridge/frontend/src/api/: index.ts
bridge/frontend/src/api/callPolkaApi/: fromResponse.ts  index.ts  toRequest.ts  types.ts
bridge/frontend/src/components/: ErrorBoundary.tsx
bridge/frontend/src/components/Address/: index.tsx
bridge/frontend/src/components/App/: index.tsx
bridge/frontend/src/components/Balance/: index.tsx
bridge/frontend/src/components/EthereumToSubstrate/: SendingForm.tsx  index.tsx
bridge/frontend/src/components/EthereumValidators/: index.tsx
bridge/frontend/src/components/SubstrateToEthereum/: SendingForm.tsx  index.tsx
bridge/frontend/src/components/context/: api.ts
bridge/frontend/src/components/form/: Checkbox.tsx  Input.tsx  Radio.tsx  Select.tsx  TextField.tsx  index.ts
bridge/frontend/src/util/: fromBaseUnit.ts  fromWeb3Event.ts  getContractData$.ts  getErrorMsg.ts  toBaseUnit.ts
bridge/frontend/src/util/hooks/: index.ts  useSubscribable.ts
bridge/frontend/src/util/validators/: index.ts  validateEthereumAddress.ts  validateFloat.ts  validateRequired.ts  validateSubstrateAddress.ts
bridge/frontend/static/: CNAME
bridge/subgraph/: package.json  schema.graphql  subgraph.yaml
bridge/subgraph/abis/: Contract.json
bridge/subgraph/src/: mapping.ts
bridge/validator/: .env.example  .gitignore  Cargo.toml  README.md
bridge/validator/raw-transaction-builder/: Cargo.toml
bridge/validator/raw-transaction-builder/src/: lib.rs
bridge/validator/res/: graph_node_all_messages.graphql  graph_node_max_block_number.graphql  graph_node_messages_by_status.graphql  graph_node_schema.graphql
bridge/validator/src/: config.rs  controller.rs  controller_storage.rs  ethereum_event_handler.rs  ethereum_event_listener.rs  ethereum_transactions.rs  executor.rs  extrinsics.rs  graph_node_event_listener.rs  main.rs  raw_transaction.rs  substrate_event_handler.rs  substrate_event_listener.rs  substrate_transactions.rs
res/: akropolis.json
runtime/: Cargo.toml
runtime/src/: bridge.rs  dao.rs  lib.rs  marketplace.rs  token.rs  types.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  cli.rs  main.rs  service.rs
